# docx-agent-sdk

./: .gitignore  README.md  pyproject.toml
src/docx_agent_sdk/: __init__.py  agent.py  schemas.py
src/docx_agent_sdk/cli/: __init__.py  main.py
src/docx_agent_sdk/documents/: __init__.py  chunker.py  parser.py
src/docx_agent_sdk/providers/: __init__.py  azure_openai_provider.py  base.py  config.py  factory.py  openai_provider.py
src/docx_agent_sdk/services/: __init__.py  comparator.py  extractor.py  prompts.py  qa.py  summarizer.py
tests/: conftest.py  test_cli.py  test_parser.py  test_provider_factory.py  test_services.py
